# ohheycrypto

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  config.json.example  example_config.json  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
ohheycrypto/: __init__.py  __version__.py  bot.py  cli.py
ohheycrypto/config/: settings.py
ohheycrypto/database/: db.py  models.py
ohheycrypto/models/: fee.py  order.py  price.py
ohheycrypto/monitoring/: metrics.py
ohheycrypto/plugins/: discord.py
ohheycrypto/services/: logging.py  market.py  wallet.py
ohheycrypto/utils/: retry.py  shutdown.py
tests/: conftest.py  test_cli.py  test_config.py  test_discord.py  test_wallet.py
